cleanup into different classes

--- a/TicTacToe.Tests.Unit/TicTacToe.Tests.Unit.csproj
+++ b/TicTacToe.Tests.Unit/TicTacToe.Tests.Unit.csproj
@@ -44,11 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\GameplayTests.cs" />
+    <Compile Include="GameControllers\GameBoardSpecifications.cs" />
+    <Compile Include="GameControllers\TicTacToeSpecifications.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TicTacToe\TicTacToe.csproj">
+      <Project>{D39C67C7-A728-4D0A-914D-5584B88774EF}</Project>
+      <Name>TicTacToe</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
